# nexarail

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum
.github/: bug_report.md  pull_request_template.md  security_report.md  validator_onboarding.md
.github/ISSUE_TEMPLATE/: bug_report.md  developer_feedback.md  sdk_example_request.md  testnet_validator_application.md
.github/workflows/: nexarail-regression.yml
app/: ante.go  app.go  app_test.go  encoding.go  export.go  genesis.go  query_multistore.go
cmd/nexaraild/: main.go
coordination/audits/: phase17e1-denom-audit.json
coordination/validators/: README.md  endpoint-inventory.csv  nodesync-reachability.md  submission-tracker.md  validator-intake.csv
docs/: CHANGELOG.md  DEVNET_SMOKE_TEST.md  LIMITATIONS.md  MODULE_STATUS.md  NEXARAIL_LITEPAPER.md  PHASE_4_CONSOLIDATION.md  PHASE_5_LIVE_FUNDS_STATUS.md  TESTNET_READINESS_CHECKLIST.md  VALIDATOR_RUNBOOK.md
docs/api/: REST_READBACK_ROUTES.md
docs/audit/: AUDIT_PACKAGE_INDEX.md  PHASE_8D_AUDIT_PACKAGE_FINAL.md
docs/design/: FUND_FLOW_SPECS.md  INVARIANTS.md  LIVE_FLAGS_MATRIX.md  LIVE_FUNDS_ARCHITECTURE.md  LIVE_FUNDS_TEST_PLAN.md  MODULE_ACCOUNTS.md  PHASE_5_IMPLEMENTATION_PLAN.md  SETTLEMENT_BURN_ROUTING_DESIGN.md  SETTLEMENT_BURN_TEST_PLAN.md  (+8 more)
examples/python-client/: README.md  build_commands.py  check_live_flags.py  nexarail_client.py  pyproject.toml  query_product_state.py  test_client.py
scripts/: init-devnet.sh  live-flags-smoke-test.sh  live-funds-e2e-test.sh  smoke-test.sh  start-devnet.sh
tools/: gen_descriptors.go
(+602 files in other folders)
